--- a/twitter_analysis-master/twitter_analysis-master/twitter/templates/index.html
+++ b/twitter_analysis-master/twitter_analysis-master/twitter/templates/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>tweet_analyser</title>
-    <link href="{{url_for('static',filename='index.css')}}" rel="stylesheet">
+<!--     <link href="{{url_for('static',filename='index.css')}}" rel="stylesheet"> -->
+    <link rel="stylesheet" type="text/css" href="index.css" media="screen"/>
 </head>
 
 <body>
